# rust-gan

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
input/: README.md
model/: README.md
pysrc/: image.py  main.py  model.py  util.py
src/: main.rs
