[package]
name = "rust-gan"
description = "A demo of Rust interop with Python, using advanced packages like PyTorch with Nix deployment."
authors = ["Artemis Rosman <rozukke@proton.me>"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
pyo3 = { version = "0.21", features = ["auto-initialize"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
